# Rad-project

./: AGENT_1_READY.md  FINAL_DELIVERY_SUMMARY.md  VERIFICATION_CHECKLIST.md
rad-assistant/: .env.example  .gitignore  Dockerfile  QUICK_RUN.md  README.md  diagnose_import.py  docker-compose.yml  pyproject.toml  rad_assistant.db  requirements.txt  run_agent.bat  run_agent.py  run_api.py  test_output.txt  triage_config.yaml
rad-assistant/alembic/: env.py
rad-assistant/alembic/versions/: 8777667ae3c0_initial_migration.py
rad-assistant/examples/: patient_summary_sample.txt  qa_bad_report.txt  request.json  request_cardiac.json  request_ct.json  sample_draft_request.json
rad-assistant/scripts/: deep_verification_agent8.py  manual_learning_digest_test.py  manual_study_orchestration_test.py  manual_triage_test.py  test_cv_agent.py  test_followup_agent.py  test_patient_explainer_agent.py  test_report_qa_agent.py
rad-assistant/src/radiology_assistant/: __init__.py  api.py  auth.py  celery_app.py  config.py  database.py  db_models.py  knowledge_base.py  llm_client.py  middleware.py  models.py  observability.py  phi_scrubber.py  repositories.py  run_report_agent.py  tasks.py
rad-assistant/src/radiology_assistant/agents/: __init__.py  cme_platform.py  fatigue_detector.py  (+10 more)
rad-assistant/tests/: conftest.py  conftest_agent7.py  test_api.py  test_cv_io.py  test_followup_extractor.py  test_learning_feedback.py  test_patient_report_explainer.py  test_report_drafter.py  test_report_qa_agent.py  test_study_orchestrator.py  test_visual_highlighter.py  test_worklist_triage.py
(+5 files in other folders)
